# py-wd-discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: init.sql  seed.sql
scripts/: main.py  requirements.txt
scripts/cogs/: inventory.py  registration.py  revive.py  shoot.py  sync_command.py
src/: create_table.sql  main.rs
